[gd_scene load_steps=36 format=2]

[ext_resource path="res://Components/Transition_Out.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fonts/FixedFont.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Classic-Font.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/Not.png" type="Texture" id=4]
[ext_resource path="res://Sprites/And.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Xor.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Or.png" type="Texture" id=7]
[ext_resource path="res://Sprites/BtnPorts.jpg" type="Texture" id=8]
[ext_resource path="res://Sprites/EntraceValues.jpg" type="Texture" id=9]
[ext_resource path="res://HowToPlay.gd" type="Script" id=10]
[ext_resource path="res://Components/Levels/fakePortMove.gd" type="Script" id=11]
[ext_resource path="res://Sprites/StartPoint.png" type="Texture" id=12]
[ext_resource path="res://Sprites/EndPoint.png" type="Texture" id=13]
[ext_resource path="res://icon.png" type="Texture" id=14]
[ext_resource path="res://Videos/PlugAndMove.webm" type="VideoStream" id=15]
[ext_resource path="res://Sprites/ErrorResult.png" type="Texture" id=16]
[ext_resource path="res://Sprites/SuccessResult.png" type="Texture" id=17]
[ext_resource path="res://Sprites/OrExemple.png" type="Texture" id=18]
[ext_resource path="res://Sprites/trash_icon2.png" type="Texture" id=19]
[ext_resource path="res://Sprites/trash_icon.png" type="Texture" id=20]
[ext_resource path="res://Sprites/coclude_lv.png" type="Texture" id=21]

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=13]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=14]
font_data = ExtResource( 2 )

[node name="HowToPlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="Transition_Out" parent="." instance=ExtResource( 1 )]

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.0980392 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 112.0
margin_bottom = 46.0
custom_constants/separation = 20

[node name="Menu" type="Button" parent="HBoxContainer"]
margin_right = 92.0
margin_bottom = 26.0
custom_colors/font_color_hover = Color( 0, 0.0627451, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0.937255, 1 )
custom_fonts/font = SubResource( 6 )
text = "Menu"

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -110.0
margin_top = 22.0
margin_right = 110.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
text = "Como Jogar"
align = 1

[node name="info" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -352.0
margin_top = -230.5
margin_right = 352.0
margin_bottom = 230.5
color = Color( 0.0705882, 0.0901961, 0.847059, 1 )

[node name="TItle" type="Label" parent="info"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -96.0
margin_top = -24.0
margin_right = 96.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 8 )
text = "Sobre o jogo"

[node name="Label" type="Label" parent="info"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "\"Logic Ports\" é um jogo desenvolvido com o intuito de auxiliar estudantes e entusiastas a compreender o funcionamento e aplicação das portas lógicas para a solução de expressões booleanas. Por meio de desafios e atividades lúdicas, o jogador é convidado a explorar as diferentes portas lógicas e como elas podem ser combinadas para criar circuitos que resolvam problemas de lógica booleana. Com uma interface interativa e intuitiva, \"Logic Ports\" busca tornar o aprendizado sobre portas lógicas mais acessível e divertido, estimulando o raciocínio lógico e a resolução de problemas de forma dinâmica e desafiadora."
align = 1
valign = 1
autowrap = true

[node name="next" type="Button" parent="info"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -124.0
margin_top = 15.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 7 )
text = "Proximo"

[node name="Info1" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -335.0
margin_top = -295.0
margin_right = 335.0
margin_bottom = -31.0
color = Color( 0.0705882, 0.0901961, 0.847059, 1 )

[node name="ColorRect" type="ColorRect" parent="Info1"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_top = 9.0
margin_right = 320.0
margin_bottom = 125.0
color = Color( 1, 1, 1, 0.0980392 )

[node name="Label" type="Label" parent="Info1/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
custom_fonts/font = SubResource( 2 )
text = "Cada nível irá possuir um indicador do desafio atual (Nível:X) e objetivo a ser solucionado, representado pela variável \"S\" (Solução), que no exemplo abaixo propõe a expressão booleana: \"(A+B)\"."
autowrap = true

[node name="SolutionContainer" type="ColorRect" parent="Info1/ColorRect"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = 60.0
margin_right = 640.0
margin_bottom = 188.0
rect_pivot_offset = Vector2( -1128, 16 )
color = Color( 1, 1, 1, 0.239216 )

[node name="Level" type="Label" parent="Info1/ColorRect/SolutionContainer"]
margin_left = 8.0
margin_top = -8.0
margin_right = 104.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 3 )
text = "Nível:"
valign = 1

[node name="AtualLevel" type="Label" parent="Info1/ColorRect/SolutionContainer"]
margin_left = 104.0
margin_top = -8.0
margin_right = 184.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 3 )
text = "X"
valign = 1

[node name="SolutionText" type="Label" parent="Info1/ColorRect/SolutionContainer"]
margin_left = 192.0
margin_top = -8.0
margin_right = 496.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 3 )
text = "Encontre a solução:"
valign = 1

[node name="S" type="Label" parent="Info1/ColorRect/SolutionContainer"]
margin_left = 48.0
margin_top = 32.0
margin_right = 104.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 4 )
text = "S:"
align = 1
valign = 1

[node name="SExpected" type="Label" parent="Info1/ColorRect/SolutionContainer/S"]
margin_left = 43.0
margin_right = 331.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 5 )
text = "(A+B)"
valign = 1

[node name="Titulo" type="Label" parent="Info1"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -296.0
margin_top = -26.0
margin_right = 296.0
margin_bottom = -10.0
custom_fonts/font = SubResource( 9 )
text = "Solução esperada e indicador de nível"

[node name="Info2" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -335.0
margin_top = 6.5
margin_right = 335.0
margin_bottom = 301.5
color = Color( 0.0705882, 0.0901961, 0.847059, 1 )

[node name="ColorRect" type="ColorRect" parent="Info2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_top = 9.0
margin_right = 320.0
margin_bottom = 125.0
color = Color( 1, 1, 1, 0.0980392 )

[node name="Label" type="Label" parent="Info2/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Cada nível fornecerá ao usuário os valores de entrada, que podem ser A, B, C ou D. Esses valores podem ser conectados por meio de linhas às portas lógicas, gerando novas expressões até que a solução desejada seja encontrada."
autowrap = true

[node name="Sprite" type="Sprite" parent="Info2"]
position = Vector2( 334, 207 )
texture = ExtResource( 9 )

[node name="next2" type="Button" parent="Info2"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -124.0
margin_top = 15.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 7 )
text = "Proximo"

[node name="back" type="Button" parent="Info2"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = 15.0
margin_right = 140.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 7 )
text = "Anterior"

[node name="Titulo" type="Label" parent="Info2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -136.0
margin_top = -29.0
margin_right = 136.0
margin_bottom = -13.0
custom_fonts/font = SubResource( 9 )
text = "Portas de entrada"

[node name="Info3" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -328.0
margin_top = 100.0
margin_right = 328.0
margin_bottom = 608.0
color = Color( 0.0705882, 0.0901961, 0.847059, 1 )

[node name="ColorRect" type="ColorRect" parent="Info3"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_top = 9.0
margin_right = 320.0
margin_bottom = 71.0
rect_pivot_offset = Vector2( -521, 62 )
color = Color( 1, 1, 1, 0.0980392 )

[node name="Label" type="Label" parent="Info3/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -43.0
custom_fonts/font = SubResource( 2 )
text = "Para gerar a solução 'S' proposta, o usuário terá acesso às portas lógicas: NOT, AND, OR e XOR
"
autowrap = true

[node name="Sprite" type="Sprite" parent="Info3"]
position = Vector2( 127, 111 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="Info3"]
position = Vector2( 255, 112 )
texture = ExtResource( 5 )

[node name="Sprite3" type="Sprite" parent="Info3"]
position = Vector2( 383, 113 )
texture = ExtResource( 7 )

[node name="Sprite4" type="Sprite" parent="Info3"]
position = Vector2( 511, 113 )
texture = ExtResource( 6 )

[node name="ColorRect2" type="ColorRect" parent="Info3"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_top = 156.0
margin_right = 320.0
margin_bottom = 252.0
rect_pivot_offset = Vector2( 312, 56 )
color = Color( 1, 1, 1, 0.0980392 )

[node name="Label" type="Label" parent="Info3/ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -43.0
custom_fonts/font = SubResource( 2 )
text = "Estas podem ser geradas pelos botões simbolizados pelo nome das portas. Cada um possui um contador que indica quantas portas o usuário ainda pode utilizar."
autowrap = true

[node name="Sprite5" type="Sprite" parent="Info3"]
position = Vector2( 327, 335 )
texture = ExtResource( 8 )

[node name="Titulo" type="Label" parent="Info3"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -136.0
margin_top = -29.0
margin_right = 136.0
margin_bottom = -13.0
custom_fonts/font = SubResource( 9 )
text = "Portas logicas"
align = 1

[node name="ColorRect3" type="ColorRect" parent="Info3"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_top = 424.0
margin_right = 320.0
margin_bottom = 500.0
rect_pivot_offset = Vector2( -521, 62 )
color = Color( 1, 1, 1, 0.0980392 )

[node name="Label" type="Label" parent="Info3/ColorRect3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -43.0
custom_fonts/font = SubResource( 2 )
text = "Para entender melhor o funcionamento de cada uma das portas, é possível acessar a opção \"Sobre as portas\" na tela inicial do jogo."
autowrap = true

[node name="next3" type="Button" parent="Info3"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -124.0
margin_top = 15.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 7 )
text = "Proximo"

[node name="back1" type="Button" parent="Info3"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = 15.0
margin_right = 140.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 7 )
text = "Anterior"

[node name="Info4" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -328.0
margin_top = 94.0
margin_right = 328.0
margin_bottom = 696.0
color = Color( 0.0705882, 0.0901961, 0.847059, 1 )

[node name="Titulo" type="Label" parent="Info4"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -224.0
margin_top = -36.0
margin_right = 224.0
margin_bottom = -20.0
custom_fonts/font = SubResource( 9 )
text = "Utilizando as Portas logicas"
align = 1

[node name="ColorRect" type="ColorRect" parent="Info4"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_top = 9.0
margin_right = 320.0
margin_bottom = 132.0
rect_pivot_offset = Vector2( -521, 62 )
color = Color( 1, 1, 1, 0.0980392 )

[node name="Label" type="Label" parent="Info4/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 2 )
text = "Ao gerar uma nova porta, a mesma poderá ser movida na tela com uso do cursor do mouse, segurando o botão esquerdo do mesmo. Podendo ser posicionada no local que o usuario julgar mais adequado para solucionar o desafio.
"
autowrap = true

[node name="ColorRect2" type="ColorRect" parent="Info4"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_top = 296.0
margin_right = 320.0
margin_bottom = 415.0
rect_pivot_offset = Vector2( -176, 170 )
color = Color( 1, 1, 1, 0.0980392 )

[node name="Label" type="Label" parent="Info4/ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = 6.0
rect_pivot_offset = Vector2( 296, 135 )
custom_fonts/font = SubResource( 2 )
text = "Caso o jogador julgue necessário, ele poderá deletar a porta, arrastando-a e soltando em cima do quadrado vermelho com o desenho de uma lixeira, somando ao contador de portas disponíveis da respectiva porta deletada."
autowrap = true

[node name="next4" type="Button" parent="Info4"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -124.0
margin_top = 15.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 7 )
text = "Proximo"

[node name="back2" type="Button" parent="Info4"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = 15.0
margin_right = 140.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 7 )
text = "Anterior"

[node name="fakePortMove" type="StaticBody2D" parent="Info4"]
script = ExtResource( 11 )

[node name="Line2D" type="Line2D" parent="Info4/fakePortMove"]
position = Vector2( -152, -78 )
points = PoolVector2Array( 400, 280, 424, 280 )

[node name="Sprite" type="Sprite" parent="Info4/fakePortMove"]
position = Vector2( 232, 202 )
texture = ExtResource( 18 )

[node name="Sprite2" type="Sprite" parent="Info4/fakePortMove"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 280, 202 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 14 )

[node name="ColorRect3" type="ColorRect" parent="Info4"]
margin_left = 221.0
margin_top = 480.0
margin_right = 285.0
margin_bottom = 544.0
color = Color( 0.556863, 0.129412, 0.129412, 1 )

[node name="Sprite" type="Sprite" parent="Info4/ColorRect3"]
position = Vector2( 32, 32 )
texture = ExtResource( 20 )

[node name="Label" type="Label" parent="Info4/ColorRect3"]
margin_left = 86.0
margin_top = 24.0
margin_right = 126.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 13 )
text = ">"

[node name="ColorRect4" type="ColorRect" parent="Info4"]
margin_left = 347.0
margin_top = 480.0
margin_right = 411.0
margin_bottom = 544.0
color = Color( 0.556863, 0.129412, 0.129412, 1 )

[node name="Sprite" type="Sprite" parent="Info4/ColorRect4"]
position = Vector2( 32, 32 )
texture = ExtResource( 19 )

[node name="Info5" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -328.0
margin_top = 94.0
margin_right = 328.0
margin_bottom = 464.0
color = Color( 0.0705882, 0.0901961, 0.847059, 1 )

[node name="Titulo" type="Label" parent="Info5"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -224.0
margin_top = -36.0
margin_right = 224.0
margin_bottom = -20.0
custom_fonts/font = SubResource( 9 )
text = "Utilizando as Portas logicas"
align = 1

[node name="ColorRect2" type="ColorRect" parent="Info5"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_top = 6.0
margin_right = 320.0
margin_bottom = 143.0
rect_pivot_offset = Vector2( -521, 62 )
color = Color( 1, 1, 1, 0.0980392 )

[node name="Label" type="Label" parent="Info5/ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 2 )
text = "Para gerar novos resultados, é necessário conectar os valores de entrada nas portas lógicas através dos fios azuis presentes tanto nos valores iniciais (A, B, C e D) quanto nas portas (NOT, AND, OR e XOR) e assim sucessivamente até a porta de saída."
autowrap = true

[node name="next5" type="Button" parent="Info5"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -124.0
margin_top = 16.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 7 )
text = "Proximo"

[node name="back3" type="Button" parent="Info5"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = 16.0
margin_right = 140.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 7 )
text = "Anterior"

[node name="SpriteContainer" type="ColorRect" parent="Info5"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -58.0
margin_top = 225.0
margin_right = 6.0
margin_bottom = 289.0
color = Color( 0, 0, 0, 0 )

[node name="ColorRect" type="ColorRect" parent="Info5/SpriteContainer"]
margin_left = -200.0
margin_top = -72.0
margin_right = 320.0
margin_bottom = 136.0
color = Color( 1, 1, 1, 0.0980392 )

[node name="Line1" type="Line2D" parent="Info5/SpriteContainer"]
points = PoolVector2Array( -112, 32, 0, 48 )

[node name="Line3" type="Line2D" parent="Info5/SpriteContainer"]
position = Vector2( 3, 32 )
points = PoolVector2Array( -115, 64, 0, 48 )

[node name="endPoint" type="Sprite" parent="Info5/SpriteContainer"]
position = Vector2( 176, 64 )
texture = ExtResource( 13 )

[node name="plugEnd" type="Sprite" parent="Info5/SpriteContainer/endPoint"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 5.24521e-06, -1.66893e-06 )
scale = Vector2( 0.25, 0.25 )
z_index = 1
texture = ExtResource( 14 )

[node name="Label2" type="Label" parent="Info5/SpriteContainer/endPoint"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -44.0
margin_top = -110.0
margin_right = 86.0
margin_bottom = -75.0
custom_fonts/font = SubResource( 11 )
text = "Saida ou Solução"
align = 1
autowrap = true

[node name="Label3" type="Label" parent="Info5/SpriteContainer/endPoint"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -24.0
margin_right = 112.0
custom_fonts/font = SubResource( 11 )
text = "S:(A*B)"
autowrap = true

[node name="Line2" type="Line2D" parent="Info5/SpriteContainer"]
position = Vector2( 169, 32 )
points = PoolVector2Array( -112, 32, 0, 32 )

[node name="StartPoint" type="Sprite" parent="Info5/SpriteContainer"]
position = Vector2( -130, 35 )
texture = ExtResource( 12 )

[node name="Label" type="Label" parent="Info5/SpriteContainer/StartPoint"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
custom_fonts/font = SubResource( 12 )
text = "A"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Info5/SpriteContainer/StartPoint"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -97.0
margin_top = -99.0
margin_right = 33.0
margin_bottom = -45.0
custom_fonts/font = SubResource( 11 )
text = "Valores de entrada"
autowrap = true

[node name="StartPoint2" type="Sprite" parent="Info5/SpriteContainer"]
position = Vector2( -130, 99 )
texture = ExtResource( 12 )

[node name="Label" type="Label" parent="Info5/SpriteContainer/StartPoint2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
custom_fonts/font = SubResource( 12 )
text = "B"
align = 1
valign = 1

[node name="porta" type="Sprite" parent="Info5/SpriteContainer"]
position = Vector2( -88, 184 )
texture = ExtResource( 5 )
offset = Vector2( 120, -120 )

[node name="Label2" type="Label" parent="Info5/SpriteContainer/porta"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 23.0
margin_top = -230.0
margin_right = 153.0
margin_bottom = -195.0
custom_fonts/font = SubResource( 11 )
text = "Porta Logica"
align = 1
autowrap = true

[node name="plug1" type="Sprite" parent="Info5/SpriteContainer"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, 47 )
scale = Vector2( 0.25, 0.25 )
z_index = 1
texture = ExtResource( 14 )

[node name="plug2" type="Sprite" parent="Info5/SpriteContainer"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, 79 )
scale = Vector2( 0.25, 0.25 )
z_index = 1
texture = ExtResource( 14 )

[node name="Info6" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -328.0
margin_top = 94.0
margin_right = 328.0
margin_bottom = 696.0
color = Color( 0.0705882, 0.0901961, 0.847059, 1 )

[node name="Titulo" type="Label" parent="Info6"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -224.0
margin_top = -36.0
margin_right = 224.0
margin_bottom = -20.0
custom_fonts/font = SubResource( 9 )
text = "Solucionando um desafio"
align = 1

[node name="ColorRect" type="ColorRect" parent="Info6"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_top = 9.0
margin_right = 320.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( -521, 62 )
color = Color( 1, 1, 1, 0.0980392 )

[node name="Label" type="Label" parent="Info6/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 2 )
text = "Para solucionar um desafio, é necessário levar o valor esperado até a porta de saída, conectando as portas lógicas corretas com os cabos azuis."
autowrap = true

[node name="ColorRect2" type="ColorRect" parent="Info6"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_top = 436.0
margin_right = 320.0
margin_bottom = 530.0
rect_pivot_offset = Vector2( -521, 62 )
color = Color( 1, 1, 1, 0.0980392 )

[node name="Label" type="Label" parent="Info6/ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = 6.0
custom_fonts/font = SubResource( 2 )
text = "Ao conectar o valor na porta de saída, caso o valor da saída seja diferente do valor esperado, a cor do valor esperado se tornará vermelha, e caso esteja correto, se tornará verde."
autowrap = true

[node name="PlugAndMove" type="VideoPlayer" parent="Info6"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -201.0
margin_right = 320.0
margin_bottom = 103.0
stream = ExtResource( 15 )

[node name="play1" type="Button" parent="Info6/PlugAndMove"]
margin_left = 304.0
margin_top = 308.0
margin_right = 636.0
margin_bottom = 330.0
custom_fonts/font = SubResource( 10 )
text = "Reproduzir novamente"

[node name="next6" type="Button" parent="Info6"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -124.0
margin_top = 15.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 7 )
text = "Proximo"

[node name="back4" type="Button" parent="Info6"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = 15.0
margin_right = 140.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 7 )
text = "Anterior"

[node name="Sprite" type="Sprite" parent="Info6"]
position = Vector2( 232, 570 )
texture = ExtResource( 16 )

[node name="Sprite2" type="Sprite" parent="Info6"]
position = Vector2( 448, 562 )
texture = ExtResource( 17 )

[node name="Info7" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -328.0
margin_top = 94.0
margin_right = 328.0
margin_bottom = 656.0
color = Color( 0.0705882, 0.0901961, 0.847059, 1 )

[node name="Titulo" type="Label" parent="Info7"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -224.0
margin_top = -36.0
margin_right = 224.0
margin_bottom = -20.0
custom_fonts/font = SubResource( 9 )
text = "Progressão"
align = 1

[node name="ColorRect" type="ColorRect" parent="Info7"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_top = 9.0
margin_right = 320.0
margin_bottom = 122.0
rect_pivot_offset = Vector2( -521, 62 )
color = Color( 1, 1, 1, 0.0980392 )

[node name="Label" type="Label" parent="Info7/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = 1.0
custom_fonts/font = SubResource( 2 )
text = "Por fim, ao solucionar um desafio, será apresentado no canto inferior direito as opções para prosseguir para o próximo nível, voltar ao menu inicial ou retornar à seleção de fases."
align = 1
autowrap = true

[node name="ColorRect2" type="ColorRect" parent="Info7"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -168.0
margin_top = 486.0
margin_right = 168.0
margin_bottom = 519.0
rect_pivot_offset = Vector2( -521, 62 )
color = Color( 1, 1, 1, 0.0980392 )

[node name="Label" type="Label" parent="Info7/ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = -88.0
custom_fonts/font = SubResource( 2 )
text = "Bom Jogo!!"
align = 1
autowrap = true

[node name="back5" type="Button" parent="Info7"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = 15.0
margin_right = 140.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 7 )
text = "Anterior"

[node name="Sprite" type="Sprite" parent="Info7"]
position = Vector2( 320, 306 )
texture = ExtResource( 21 )

[node name="ReturnMenu" type="Button" parent="Info7"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -240.0
margin_top = 297.0
margin_right = -4.0
margin_bottom = 319.0
custom_fonts/font = SubResource( 14 )
text = "Voltar ao menu"

[connection signal="pressed" from="HBoxContainer/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="info/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Info2/next2" to="." method="_on_next2_pressed"]
[connection signal="pressed" from="Info2/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Info3/next3" to="." method="_on_next3_pressed"]
[connection signal="pressed" from="Info3/back1" to="." method="_on_back1_pressed"]
[connection signal="pressed" from="Info4/next4" to="." method="_on_next4_pressed"]
[connection signal="pressed" from="Info4/back2" to="." method="_on_back2_pressed"]
[connection signal="pressed" from="Info5/next5" to="." method="_on_next5_pressed"]
[connection signal="pressed" from="Info5/back3" to="." method="_on_back3_pressed"]
[connection signal="pressed" from="Info6/PlugAndMove/play1" to="." method="_on_play1_pressed"]
[connection signal="pressed" from="Info6/next6" to="." method="_on_next6_pressed"]
[connection signal="pressed" from="Info6/back4" to="." method="_on_back4_pressed"]
[connection signal="pressed" from="Info7/back5" to="." method="_on_back5_pressed"]
[connection signal="pressed" from="Info7/ReturnMenu" to="." method="_on_ReturnMenu_pressed"]
